# pyrightmcp

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/pyrightmcp/: __init__.py  main.py  model.py  pyright_service.py
